Progress--added LLM and tesing graphs

--- a/graphrag.ipynb
+++ b/graphrag.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -11,10 +11,18 @@
      "text": [
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR: Could not find a version that satisfies the requirement langcore-chains (from versions: none)\n",
+      "ERROR: No matching distribution found for langcore-chains\n"
+     ]
     }
    ],
    "source": [
-    "%pip install --quiet neo4j langchain-community langchain-experimental langchain-openai json-repair"
+    "%pip install --quiet neo4j langchain-community langchain-experimental langchain-openai json-repair langcore-chains"
    ]
   },
   {
@@ -26,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,15 +132,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nodes:[Node(id='Apples', type='Food', properties={}), Node(id='Red', type='Color', properties={})]\n",
-      "Relationships:[Relationship(source=Node(id='Apples', type='Food', properties={}), target=Node(id='Red', type='Color', properties={}), type='APPEARANCE', properties={})]\n"
+      "Nodes:[Node(id='Apples', type='Object', properties={}), Node(id='Small', type='Object', properties={})]\n",
+      "Relationships:[Relationship(source=Node(id='Apples', type='Object', properties={}), target=Node(id='Small', type='Object', properties={}), type='SIZE', properties={})]\n"
      ]
     }
    ],
@@ -143,8 +151,73 @@
     "\n",
     "documents = [Document(page_content=text)]\n",
     "graph_documents = llm_transformer.convert_to_graph_documents(documents)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# assign a unique document ID\n",
+    "document_id = 'apple2'\n",
+    "for graph_document in graph_documents:\n",
+    "    # For nodes\n",
+    "    for node in graph_document.nodes:\n",
+    "        # Prepare Cypher query to add document_id to the node\n",
+    "        query = \"\"\"\n",
+    "        MATCH (n)\n",
+    "        SET n.document_id = 'apple2'\n",
+    "        RETURN n\n",
+    "        \"\"\"\n",
+    "        # Use graph.query() to run the query\n",
+    "        graph.query(query, {\"node_id\": node.id, \"document_id\": document_id})\n",
+    "\n",
+    "\n",
+    "\n",
+    "no_schema = LLMGraphTransformer(llm=llm)\n",
+    "data = await no_schema.aconvert_to_graph_documents(documents)\n",
+    "graph.add_graph_documents(data)\n",
+    "\n",
     "print(f\"Nodes:{graph_documents[0].nodes}\")\n",
     "print(f\"Relationships:{graph_documents[0].relationships}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new GraphQAChain chain...\u001b[0m\n",
+      "Entities Extracted:\n",
+      "\u001b[32;1m\u001b[1;3mApples\u001b[0m\n",
+      "Full Context:\n",
+      "\u001b[32;1m\u001b[1;3m\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n",
+      "- Apples are a type of fruit.\n",
+      "- Apples are typically red, green, or yellow in color.\n",
+      "- Apples are a good source of fiber and vitamin C.\n",
+      "\n",
+      "I'm sorry, I don't know the answer to your question.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from langchain.chains import GraphQAChain\n",
+    "\n",
+    "# Assuming you have a properly populated graph and a language model (llm)\n",
+    "chain = GraphQAChain.from_llm(\n",
+    "    llm=llm, \n",
+    "    graph=graph, \n",
+    "    verbose=True\n",
+    ")\n",
+    "\n",
+    "question = \"What are the properties of Apples?\"\n",
+    "response = chain.run(question)\n",
+    "\n",
+    "print(response)  # Check the output"
    ]
   },
   {
@@ -189,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +272,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[8], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m graph\u001b[38;5;241m.\u001b[39madd_graph_documents(\u001b[43mgraph_documents_props\u001b[49m, baseEntityLabel\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m# baseEntityLabel allows us to optimize data retrieval even though we don't know all node labels and don't keep track of indices\u001b[39;00m\n",
+      "Cell \u001b[1;32mIn[16], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m graph\u001b[38;5;241m.\u001b[39madd_graph_documents(\u001b[43mgraph_documents_props\u001b[49m, baseEntityLabel\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m# baseEntityLabel allows us to optimize data retrieval even though we don't know all node labels and don't keep track of indices\u001b[39;00m\n",
       "\u001b[1;31mNameError\u001b[0m: name 'graph_documents_props' is not defined"
      ]
     }
@@ -218,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +329,7 @@
        "True"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
