--- a/graphrag.ipynb
+++ b/graphrag.ipynb
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -196,9 +196,9 @@
       "\u001b[32;1m\u001b[1;3m\u001b[0m\n",
       "\n",
       "\u001b[1m> Finished chain.\u001b[0m\n",
-      "- Apples are a type of fruit.\n",
-      "- Apples are typically red, green, or yellow in color.\n",
-      "- Apples are a good source of fiber and vitamin C.\n",
+      "- Apples are a type of fruit\n",
+      "- Apples are typically red, green, or yellow in color\n",
+      "- Apples are a good source of fiber and vitamin C\n",
       "\n",
       "I'm sorry, I don't know the answer to your question.\n"
      ]
@@ -365,7 +365,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
