Testing with 2 docs that disagree

--- a/graphrag2.ipynb
+++ b/graphrag2.ipynb
@@ -205,27 +205,47 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[GraphDocument(nodes=[Node(id='Ca2+/Calmodulin-Dependent Protein Kinase Ii', type='Protein', properties={}), Node(id='Synapses', type='Concept', properties={}), Node(id='Cell Signalling', type='Concept', properties={}), Node(id='Ca2+ Transients', type='Concept', properties={}), Node(id='Ltp', type='Concept', properties={}), Node(id='Memory Storing', type='Concept', properties={}), Node(id='Pka', type='Protein', properties={}), Node(id='Glur1', type='Protein', properties={}), Node(id='Pkc', type='Protein', properties={}), Node(id='Tir840 Site', type='Concept', properties={}), Node(id='Protein Phosphatase 1', type='Protein', properties={}), Node(id='Ampa-Receptors', type='Concept', properties={}), Node(id='Nmda-Receptors', type='Concept', properties={}), Node(id='Dendritic Spine Formation', type='Concept', properties={}), Node(id='Dendritic Spine Dynamics', type='Concept', properties={}), Node(id='Pp1', type='Protein', properties={}), Node(id='Camp', type='Concept', properties={}), Node(id='Ca2+', type='Concept', properties={}), Node(id='Pkc Enzyme Family', type='Protein', properties={}), Node(id='Pp2B', type='Protein', properties={}), Node(id='Calcineurin', type='Protein', properties={}), Node(id='Second Messenger', type='Concept', properties={}), Node(id='Calmodulin', type='Concept', properties={}), Node(id='B Regulatory Subunit', type='Concept', properties={})], relationships=[Relationship(source=Node(id='Ca2+/Calmodulin-Dependent Protein Kinase Ii', type='Protein', properties={}), target=Node(id='Synapses', type='Concept', properties={}), type='ABUNDANT_IN', properties={}), Relationship(source=Node(id='Ca2+/Calmodulin-Dependent Protein Kinase Ii', type='Protein', properties={}), target=Node(id='Cell Signalling', type='Concept', properties={}), type='MEDIATES', properties={}), Relationship(source=Node(id='Ca2+/Calmodulin-Dependent Protein Kinase Ii', type='Protein', properties={}), target=Node(id='Ca2+ Transients', type='Concept', properties={}), type='RESPONDS_TO', properties={}), Relationship(source=Node(id='Ca2+/Calmodulin-Dependent Protein Kinase Ii', type='Protein', properties={}), target=Node(id='Ltp', type='Concept', properties={}), type='INVOLVED_IN', properties={}), Relationship(source=Node(id='Ca2+/Calmodulin-Dependent Protein Kinase Ii', type='Protein', properties={}), target=Node(id='Memory Storing', type='Concept', properties={}), type='IMPLICATED_IN', properties={}), Relationship(source=Node(id='Ca2+/Calmodulin-Dependent Protein Kinase Ii', type='Protein', properties={}), target=Node(id='Glur1', type='Protein', properties={}), type='PHOSPHORYLATES', properties={}), Relationship(source=Node(id='Pka', type='Protein', properties={}), target=Node(id='Ltp', type='Concept', properties={}), type='MODULATES', properties={}), Relationship(source=Node(id='Pka', type='Protein', properties={}), target=Node(id='Glur1', type='Protein', properties={}), type='PHOSPHORYLATES', properties={}), Relationship(source=Node(id='Pkc', type='Protein', properties={}), target=Node(id='Glur1', type='Protein', properties={}), type='PHOSPHORYLATES', properties={}), Relationship(source=Node(id='Pkc', type='Protein', properties={}), target=Node(id='Tir840 Site', type='Concept', properties={}), type='PHOSPHORYLATES', properties={}), Relationship(source=Node(id='Protein Phosphatase 1', type='Protein', properties={}), target=Node(id='Ampa-Receptors', type='Concept', properties={}), type='REGULATES', properties={}), Relationship(source=Node(id='Protein Phosphatase 1', type='Protein', properties={}), target=Node(id='Nmda-Receptors', type='Concept', properties={}), type='REGULATES', properties={}), Relationship(source=Node(id='Protein Phosphatase 1', type='Protein', properties={}), target=Node(id='Dendritic Spine Formation', type='Concept', properties={}), type='MODULATES', properties={}), Relationship(source=Node(id='Protein Phosphatase 1', type='Protein', properties={}), target=Node(id='Dendritic Spine Dynamics', type='Concept', properties={}), type='MODULATES', properties={}), Relationship(source=Node(id='Protein Phosphatase 1', type='Protein', properties={}), target=Node(id='Camp', type='Concept', properties={}), type='MODULATES', properties={}), Relationship(source=Node(id='Protein Phosphatase 1', type='Protein', properties={}), target=Node(id='Ca2+', type='Concept', properties={}), type='MODULATES', properties={}), Relationship(source=Node(id='Pp2B', type='Protein', properties={}), target=Node(id='Calcineurin', type='Protein', properties={}), type='ALSO_KNOWN_AS', properties={}), Relationship(source=Node(id='Pp2B', type='Protein', properties={}), target=Node(id='Second Messenger', type='Concept', properties={}), type='MODULATED_BY', properties={}), Relationship(source=Node(id='Pp2B', type='Protein', properties={}), target=Node(id='Calmodulin', type='Concept', properties={}), type='MODULATED_BY', properties={}), Relationship(source=Node(id='Pp2B', type='Protein', properties={}), target=Node(id='B Regulatory Subunit', type='Concept', properties={}), type='MODULATED_BY', properties={})], source=Document(metadata={}, page_content='Ca2+/Calmodulin-dependent protein kinase II (CaMKII) is abundant in synapses\\nand able to mediate cell signalling in response to Ca2+ transients. Both in vitro and\\nin vivo studies revealed that synaptic stimulation causes a rapid translocation of\\nCaMKII to the synapse (Lisman, 1985; Wu and Betz, 1998) and an acute increase\\nof CaMKII activity leads to a potentiation followed by an occlusion of LTP (Wu\\nand Betz, 1998), indicating a key role in synaptic plasticity (Whitlock et al., 2006).\\nThe CaMKII property, as multienzymatic systems, to phosphorylate itself, is the\\nmolecular basis for a form of switch-like behaviour that is thought to be implicated\\nwith memory storing. The CaMKII phosphorylated state, in contraposition to the\\nnon-phosphorylated one, is more active even at low calcium concentration and may\\nprovide a mechanism for long-lasting memory without gene expression that is under\\nintense investigation from long time (Lisman 85 e nuovo).\\nThe protein kinase A cyclic adenosine monophosphate (cAMP)-dependent (PKA)\\nis thought to be a LTP modulator. Recent studies showed that PKA act as a gating\\nfactor for the threshold of LTP induction (Carmignoto and Vicini, 1992), probably\\nthrough the GluR1 phosphorylation at Ser845 site that might increase the AMPAr\\nopen-probability (Quinlan et al., 1999).\\nThe protein kinase C (PKC) has attracted great attention in the last 15 years. To\\ndate the PKC enzyme family consists of 12 isozymes that can be further categorized into Ca2+-dependent and Ca2+-independent isoforms. Recently PKC has been\\ncharacterized as responsible for the phosphorylation at the Tir840 site of the GluR1\\n(Philpot et al., 2001).\\nProtein phosphatase 1 (PP1) complexes are necessary for normal regulation of\\nAMPA- and NMDA-receptors and modulate dendritic spine formation and dynamics (Petralia and Wenthold, 1992). PP1 activity might be antagonistically modulated\\nby cAMP and Ca2+ signalling pathways (Walaas and Greengard, 1991), allowing\\nmultiple neurotransmitters to fine-tune synaptic plasticity (for review, see Malinow\\nand Malenka, 2002).\\nPP2B (also known as calcineurin) is the only phosphatase directly modulated by a\\nsecond messenger (Ca2+ acting via calmodulin and the B regulatory subunit). PP2B\\nhas a relatively restricted substrate specificity compared with other phosphatases.\\nBecause PP2B is activated at lower Ca2+/calmodulin concentrations than CaMKII,\\nweak synaptic stimulation may preferentially activate PP2B, whereas stronger stimulation also recruits CaMKII activation (Tzounopoulos et al., 2007).'))]\n"
-     ]
-    }
-   ],
+   "source": [
+    "Example: Marie curie document"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from langchain_core.documents import Document\n",
-    "with open('document2.txt', 'r') as file:\n",
+    "with open('apple_document.txt', 'r') as file:\n",
     "    text = file.read()\n",
     "\n",
     "doc = [Document(page_content=text)]\n",
     "graph_doc = await llm_transformer.aconvert_to_graph_documents(doc)\n",
-    "print(graph_doc.)\n",
-    "\n"
+    "graph.add_graph_documents(graph_doc, include_source=True, baseEntityLabel=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_core.documents import Document\n",
+    "with open('banana_document.txt', 'r') as file:\n",
+    "    text = file.read()\n",
+    "\n",
+    "doc = [Document(page_content=text)]\n",
+    "graph_doc = await llm_transformer.aconvert_to_graph_documents(doc)\n",
+    "graph.add_graph_documents(graph_doc, include_source=True, baseEntityLabel=True)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Example: Neuroscience paper\n"
    ]
   },
   {
@@ -309,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -347,28 +367,28 @@
     "Also when querying, do not care about the direction of the relationship, so use `-` rather than `->`.\n",
     "When comparing to the target node, use a fuzzy matching operator like `CONTAINS` rather than strict .id: to find related nodes.\n",
     "Also, capitalize the target node appropriately to get a match in the graph.\n",
-    "When querying, exclude any nodes labeled as `Document` or containing a `source` property, where these nodes connect to every other using \"MENTIONS\" relationship.\n",
+    "When querying, also match for a node x that is the document that connects to relevant nodes, where x.id is equal to the inputted document_id. However, do not return this node x in the context.\n",
     "\n",
     "\n",
     "Example 1 (specific to a particular schema):\n",
     "Question: What are the proteins associated with 'tir840'?\n",
     "Generated Cypher: \n",
-    "MATCH (p)-[r]-(c)\n",
-    "WHERE c.id CONTAINS 'Tir840' AND NOT p:Document AND NOT c:Document\n",
+    "MATCH (x)-[]-(p)-[r]-(c)\n",
+    "WHERE c.id CONTAINS 'Tir840' AND NOT p:Document AND NOT c:Document AND x.id=\"{document_id}\"\n",
     "RETURN p, r, c\n",
     "\n",
     "Example 2 (specific to a particular schema):\n",
     "Question: Give me an overview of the Concept 'Tir840 Site'.\n",
     "Generated Cypher:\n",
-    "MATCH (p)-[r]-(c)\n",
-    "WHERE c.id CONTAINS 'Tir840' AND NOT p:Document AND NOT c:Document\n",
+    "MATCH (x)-[]-(p)-[r]-(c)\n",
+    "WHERE c.id CONTAINS 'Tir840' AND NOT p:Document AND NOT c:Document AND x.id=\"{document_id}\" \n",
     "RETURN p, r, c\n",
     "\n",
     "Example 3 (specific to a particular schema):\n",
     "Question: What is Glur1?\n",
     "Generated Cypher: \n",
-    "MATCH (p)-[r]-(c)\n",
-    "WHERE c.id CONTAINS 'Glur1' AND NOT p:Document AND NOT c:Document\n",
+    "MATCH (x)-[]-(p)-[r]-(c)\n",
+    "WHERE c.id CONTAINS 'Glur1' AND NOT p:Document AND NOT c:Document AND x.id=\"{document_id}\"\n",
     "RETURN p, r, c\n",
     "\n",
     "Schema:\n",
@@ -382,7 +402,7 @@
     "{question}\"\"\"\n",
     "\n",
     "CYPHER_GENERATION_PROMPT = PromptTemplate(\n",
-    "    input_variables=[\"schema\", \"question\"], template=CYPHER_GENERATION_TEMPLATE\n",
+    "    input_variables=[\"schema\", \"question\", \"document_id\"], template=CYPHER_GENERATION_TEMPLATE\n",
     ")\n",
     "\n",
     "chain = GraphCypherQAChain.from_llm(\n",
@@ -398,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -416,11 +436,11 @@
       "\n",
       "\u001b[1m> Entering new GraphCypherQAChain chain...\u001b[0m\n",
       "Generated Cypher:\n",
-      "\u001b[32;1m\u001b[1;3mMATCH (p)-[r]-(c)\n",
-      "WHERE c.id CONTAINS 'Pka' AND NOT p:Document AND NOT c:Document\n",
+      "\u001b[32;1m\u001b[1;3mMATCH (x)-[]-(p)-[r]-(c)\n",
+      "WHERE c.id CONTAINS 'Marie Curie' AND NOT p:Document AND NOT c:Document AND x.id=\"ec330438e7e3ecde9dc4577980c2aa54\"\n",
       "RETURN p, r, c\u001b[0m\n",
       "Full Context:\n",
-      "\u001b[32;1m\u001b[1;3m[{'p': {'id': 'Ltp'}, 'r': ({'id': 'Pka'}, 'MODULATOR_OF', {'id': 'Ltp'}), 'c': {'id': 'Pka'}}, {'p': {'id': 'Glur1'}, 'r': ({'id': 'Pka'}, 'PHOSPHORYLATES_AT', {'id': 'Glur1'}), 'c': {'id': 'Pka'}}]\u001b[0m\n",
+      "\u001b[32;1m\u001b[1;3m[{'p': {'id': '1867'}, 'r': ({'id': 'Marie Curie'}, 'BORN_IN', {'id': '1867'}), 'c': {'id': 'Marie Curie'}}, {'p': {'id': 'Polish'}, 'r': ({'id': 'Marie Curie'}, 'NATIONALITY', {'id': 'Polish'}), 'c': {'id': 'Marie Curie'}}, {'p': {'id': 'French'}, 'r': ({'id': 'Marie Curie'}, 'NATIONALITY', {'id': 'French'}), 'c': {'id': 'Marie Curie'}}, {'p': {'id': 'Pierre Curie'}, 'r': ({'id': 'Marie Curie'}, 'MARRIED_TO', {'id': 'Pierre Curie'}), 'c': {'id': 'Marie Curie'}}, {'p': {'id': 'University Of Paris'}, 'r': ({'id': 'Marie Curie'}, 'BECAME_PROFESSOR', {'id': 'University Of Paris'}), 'c': {'id': 'Marie Curie'}}, {'p': {'id': 'Physicist'}, 'r': ({'id': 'Marie Curie'}, 'HAS_EXPERTISE', {'id': 'Physicist'}), 'c': {'id': 'Marie Curie'}}, {'p': {'id': 'Chemist'}, 'r': ({'id': 'Marie Curie'}, 'HAS_EXPERTISE', {'id': 'Chemist'}), 'c': {'id': 'Marie Curie'}}, {'p': {'id': 'Radioactivity'}, 'r': ({'id': 'Marie Curie'}, 'CONDUCTED_RESEARCH_ON', {'id': 'Radioactivity'}), 'c': {'id': 'Marie Curie'}}, {'p': {'id': 'Nobel Prize'}, 'r': ({'id': 'Marie Curie'}, 'WON', {'id': 'Nobel Prize'}), 'c': {'id': 'Marie Curie'}}]\u001b[0m\n",
       "\n",
       "\u001b[1m> Finished chain.\u001b[0m\n"
      ]
@@ -428,24 +448,25 @@
    ],
    "source": [
     "# user_query = \"Give me an overviwe of Glur1\"\n",
-    "user_query = \"What other molecules affects Pka and what are the relationships?\"\n",
+    "# user_query = \"What other molecules affects Pka and what are the relationships?\"\n",
+    "user_query = \"Who is Marie Curie?\"\n",
     "# user_query = user_query.lower().strip()\n",
     "graph.refresh_schema()\n",
-    "context = chain.invoke({\"query\": user_query}) \n",
+    "context = chain.invoke({\"query\": user_query, \"document_id\": \"ec330438e7e3ecde9dc4577980c2aa54\"}) \n",
     "\n",
     "# chain.invoke(\"\") "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ltp is affected by Pka as a modulator, and Glur1 is affected by Pka through phosphorylation.\n"
+      "Marie Curie was a Polish-French physicist and chemist known for her expertise in radioactivity. She conducted research on radioactivity and won the Nobel Prize. She was also married to Pierre Curie and became a professor at the University of Paris.\n"
      ]
     }
    ],
